add verify email gRPC API with Redis
